<resources>
    <string name="app_name">Tasks To-Do</string>
    <string name="name_label">Rahul Krishnan</string>
    <string name="degree_label">Pursuing B.Tech in CSE</string>
    <string name="location_label">Amritapuri, Kollam</string>
    <string name="profile_image">Profile Image</string>
    <string name="technical_skills_label">Technical Skills</string>
    <string name="java_label">Java</string>
    <string name="python_label">Python</string>
    <string name="web_dev_label">Web development</string>
    <string name="c_label">C</string>
    <string name="cpp_label">C++</string>
    <string name="algorithms_label">Algorithms and Data Structures</string>
    <string name="machine_learning_label">Machine learning</string>
    <string name="pattern_recognition_label">Pattern recognition</string>
    <string name="android_label">Android app development</string>
    <string name="personal_details_label">Personal Details</string>
    <string name="email_label">Email id: rahul.krishnan27@gmail.com</string>
    <string name="phone_label">Phone no: +91- 9400538200</string>
    <string name="areas_of_interest_label">Areas of Interest</string>
    <string name="deep_learning_label">Deep learning</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="about_me">About Developer</string>
    <string name="task_name_hint">Enter task</string>
    <string name="today_text">Today</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="upcoming_text">Upcoming</string>
    <string name="add_task_label">Add a new Task</string>
    <string name="mark_btn_label">Mark as done</string>
    <string name="edit_task_header">Edit task</string>
    <string name="task_date_hint">Enter due date</string>
    <string name="empty_task_label">No tasks due</string>
    <string name="about_developer_label">About Developer</string>
    <string name="time_label">Enter time</string>
    <string name="finished_task_label">Finished Tasks</string>
    <string name="task_history_label">Task History</string>
    <string name="time_picker_dialog">Select Time</string>
    <string name="notification_label">Task Due Notification</string>
    <string name="date_format_label">MM/dd/yyyy</string>
    <string name="mark_done_label">Mark Done</string>
    <string name="cancel_label">Cancel</string>
    <string name="edit_task_label">Edit Task</string>
    <string name="task_label">Task</string>
    <string name="overdue_label">Overdue Tasks</string>
    <string name="reminder_msg_label">Reminder Set</string>
    <string name="task_name_prompt">Please enter task name</string>
    <string name="task_date_prompt">Please enter task date</string>
    <string name="task_time_prompt">Please enter task time</string>
    <string name="history_activity_label">History</string>
</resources>
