<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        <TextView
            android:text="@string/today_text"
            style="@style/list_header_style" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/taskListToday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="#333232"
                    android:dividerHeight="1dp"
                    android:visibility="visible"/>

            </android.support.v7.widget.CardView>
            <TextView
                style="@style/list_header_style"
                android:text="@string/tomorrow_text" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/taskListTomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="#333232"
                    android:dividerHeight="1dp"
                    android:visibility="visible"/>

            </android.support.v7.widget.CardView>
            <TextView
                style="@style/list_header_style"
                android:text="@string/upcoming_text" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/taskListUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="#333232"
                    android:dividerHeight="1dp"
                    android:visibility="visible"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>